Fix spacing

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -71,7 +71,7 @@ html,
 	counter-rest: item;
 	padding-left: 0;
 	list-style-position: outside;
-	margin-left: 2em;
+	margin-left: 3.1em;
 }
 
 .intro-text ol li {
